Trying to fix linebreaks in richtext

--- a/packages/renderer-core/src/components/field-wrapper/style.scss
+++ b/packages/renderer-core/src/components/field-wrapper/style.scss
@@ -25,7 +25,7 @@
 		transform: translate3d(0, 0, 0);
 		-webkit-transform: translate3d(0, 0, 0);
 		-moz-transform: trasnslate3d(0, 0, 0);
-		will-change: transform, z-index;
+		will-change: transform, z-index, opacity;
 
 		.renderer-components-question-header, .renderer-core-field-display-wrapper {
 			transition: transform 600ms ease 0s;
